// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`with "--help" option 1`] = `
"cli.js <command>

Commands:
  cli.js init  Setup npm project, e.g. update 'package.json'

Options:
  -h, --help     Show help                                             [boolean]
  -v, --version  Show version number                                   [boolean]
"
`;

exports[`with "-h" option 1`] = `
"cli.js <command>

Commands:
  cli.js init  Setup npm project, e.g. update 'package.json'

Options:
  -h, --help     Show help                                             [boolean]
  -v, --version  Show version number                                   [boolean]
"
`;

exports[`with arguments [] 1`] = `
"Command failed: ./lib/cli.js
cli.js <command>

Commands:
  cli.js init  Setup npm project, e.g. update 'package.json'

Options:
  -h, --help     Show help                                             [boolean]
  -v, --version  Show version number                                   [boolean]

Not enough non-option arguments: got 0, need at least 1
"
`;

exports[`with arguments []: stderr 1`] = `
[Error: Command failed: ./lib/cli.js
cli.js <command>

Commands:
  cli.js init  Setup npm project, e.g. update 'package.json'

Options:
  -h, --help     Show help                                             [boolean]
  -v, --version  Show version number                                   [boolean]

Not enough non-option arguments: got 0, need at least 1
]
`;

exports[`with arguments [unknown, xyz] 1`] = `
"Command failed: ./lib/cli.js unknown xyz
cli.js <command>

Commands:
  cli.js init  Setup npm project, e.g. update 'package.json'

Options:
  -h, --help     Show help                                             [boolean]
  -v, --version  Show version number                                   [boolean]

Unknown arguments: unknown, xyz
"
`;

exports[`with arguments [unknown, xyz]: stderr 1`] = `
[Error: Command failed: ./lib/cli.js unknown xyz
cli.js <command>

Commands:
  cli.js init  Setup npm project, e.g. update 'package.json'

Options:
  -h, --help     Show help                                             [boolean]
  -v, --version  Show version number                                   [boolean]

Unknown arguments: unknown, xyz
]
`;

exports[`with arguments [unknown] 1`] = `
"Command failed: ./lib/cli.js unknown
cli.js <command>

Commands:
  cli.js init  Setup npm project, e.g. update 'package.json'

Options:
  -h, --help     Show help                                             [boolean]
  -v, --version  Show version number                                   [boolean]

Unknown argument: unknown
"
`;

exports[`with arguments [unknown]: stderr 1`] = `
[Error: Command failed: ./lib/cli.js unknown
cli.js <command>

Commands:
  cli.js init  Setup npm project, e.g. update 'package.json'

Options:
  -h, --help     Show help                                             [boolean]
  -v, --version  Show version number                                   [boolean]

Unknown argument: unknown
]
`;
